--- a/index.html
+++ b/index.html
@@ -36,6 +36,7 @@
 
 	<ul class="blogList">
 		<li>1.<a href="https://www.zybuluo.com/jordenli/note/607542">angular1路由参数</a></li>
+		<li>2.<a href="https://www.zybuluo.com/jordenli/note/607640">git遇到的若干问题</a></li>
 	</ul>
 </body>
 </html>
