--- a/index.html
+++ b/index.html
@@ -37,6 +37,7 @@
 	<ul class="blogList">
 		<li>1.<a href="https://www.zybuluo.com/jordenli/note/607542">angular1路由参数</a></li>
 		<li>2.<a href="https://www.zybuluo.com/jordenli/note/607640">git遇到的若干问题</a></li>
+		<li>3.<a href="https://www.zybuluo.com/jordenli/note/610397">angular2的路由参数</a></li>
 	</ul>
 </body>
 </html>
